tests/integration/libuild/errors/schema-type-error/error.js
module.exports = {
  msg: 'The content of `input` must be a string.',
};
